--- a/mapplus.html
+++ b/mapplus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>주소 기반 분석</title>
+    <title>데이터 기반 분석</title>
 
     <!-- Leaflet.js 지도 라이브러리 -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
